// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextMenuItemChildren when a checkmark icon renders the component with the checkmark 1`] = `
<div
  class="linkContent"
>
  <i
    aria-hidden="true"
    class=
        ms-Icon-placeHolder
        checkmarkIcon
        {
          display: inline-block;
          text-decoration: inherit;
          width: 1em;
        }
    data-icon-name=""
  />
</div>
`;

exports[`ContextMenuItemChildren when hide checkmark icon for toggle command renders the component with the checkmark 1`] = `
<div>
  <div
    class="linkContent"
  >
    <i
      aria-hidden="true"
      class=
          ms-Icon-placeHolder
          checkmarkIcon
          {
            display: inline-block;
            text-decoration: inherit;
            width: 1em;
          }
      data-icon-name=""
    />
  </div>
</div>
`;

exports[`ContextMenuItemChildren when it has a sub menu renders the menu icon 1`] = `
<div>
  <div
    class="linkContent"
  >
    <i
      aria-hidden="true"
      class=
          icon
          {
            display: inline-block;
            text-decoration: inherit;
          }
    />
    <i
      aria-hidden="true"
      class=
          subMenuIcon
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            display: inline-block;
            font-family: "FabricMDL2Icons";
            font-style: normal;
            font-weight: normal;
            speak: none;
            text-decoration: inherit;
          }
      data-icon-name="ChevronRight"
    >
      
    </i>
  </div>
</div>
`;

exports[`ContextMenuItemChildren when it has icons when it doesnt have iconProps renders the icon with iconName 1`] = `
<div>
  <div
    class="linkContent"
  >
    <i
      aria-hidden="true"
      class=
          icon
          {
            display: inline-block;
            text-decoration: inherit;
          }
    />
  </div>
</div>
`;

exports[`ContextMenuItemChildren when it has icons when it has iconProps renders the icon 1`] = `
<div>
  <div
    class="linkContent"
  >
    <i
      aria-hidden="true"
      class=
          icon
          {
            display: inline-block;
            text-decoration: inherit;
          }
      data-icon-name="itemIcon"
    >
      itemIcon
    </i>
    <span
      class="label"
    >
      menuItem
    </span>
  </div>
</div>
`;
